--- a/kindlepocket-web/src/main/resources/static/html/introduction.html
+++ b/kindlepocket-web/src/main/resources/static/html/introduction.html
@@ -6,8 +6,7 @@
 	content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet"
-	href="/js/vue/materialize.min.css">
+<link rel="stylesheet" href="/js/vue/materialize.min.css">
 <title>Introduction</title>
 </head>
 <body>
@@ -24,9 +23,60 @@
 						<i class="material-icons">subtitles</i>Kindle Pocket 使用说明
 					</div>
 					<div class="collapsible-body">
-						<span>
-							1. 本公众号不做商业用途，仅提供个人电子图书推送业务，并以亚马逊Kindle设备为主；<br/><br/>
-							2. 在本公众号对话界面，输入电子书关键字，如：“人”，即可搜索带有此关键字的书目；输入数字“ 2 ” 或“绑定”或“更新”，即可进行个人邮箱和Kindle设备的绑定；输入数字“ 1 ”或“介绍”或“指南”，即可重新接收此【 Kindle Pocket使用说明 】。
+						<span> 本公众号不做商业用途，仅为订阅者提供个人电子图书搜索和推送业务，并以亚马逊Kindle设备为主；<br />
+							您可以自由绑定Kindle邮箱或其他个人邮箱作为接收电子图书的目的邮箱。
+						</span>
+					</div>
+				</li>
+				<li>
+					<div class="collapsible-header active waves-effect">
+						<i class="material-icons">subtitles</i>操作指南
+					</div>
+					<div class="collapsible-body">
+						<span> 
+							1. 在本公众号对话界面，输入电子书关键字，如：“红楼梦”，即可搜索带有此关键字的书目；输入数字“ 2
+							” 或“绑定”或“更新”，即可进行个人邮箱和Kindle设备的绑定；输入数字“ 1 ”或“介绍”或“指南”，即可重新接收此【
+							Kindle Pocket使用说明 】；<br />&nbsp;&nbsp;&nbsp;&nbsp;
+							<div class="row">
+								<div class="col s6">
+								<img class="materialboxed" data-caption="账户绑定" width="125"
+								 src="/imgs/binding.png"> 
+								</div>
+								<div class="col s6">
+								<img
+									class="materialboxed" data-caption="账户更新" width="125"
+								 src="/imgs/update.png">
+								</div>
+							</div>
+							<div class="row">
+								<div class="col s6">
+								<img class="materialboxed" data-caption="关键字搜索" width="125"
+								 src="/imgs/search.png"> 
+								</div>
+								<div class="col s6">
+								<img class="materialboxed" data-caption="指南" width="125"
+								 src="/imgs/guiding.png"> 
+								</div>
+							</div>
+							2. 点击关键字搜索的结果，即可进入详情界面；在详情界面，您可以点击“Comment”按钮评论电子书，或点击“Send”按钮，后台会将此电子书推送到您的绑定的Kindle邮箱（或其他类型的邮箱）；点击右下角红色“+”，可以查看个人信息、反馈意见和查看此【 Kindle
+							Pocket使用说明 】；<br /> <br /> 
+							<div class="row">
+								<div class="col s6">
+								<img class="materialboxed" data-caption="查询详情" width="125"
+								 src="/imgs/detail.png"> 
+								</div>
+								<div class="col s6">
+								<img class="materialboxed" data-caption="查询详情 - 菜单键" width="125"
+								 src="/imgs/detail_menu.png"> 
+								</div>
+							</div>
+							3. 在个人信息页面中，您可以查看账户绑定信息并更新，查看推送记录、评论记录和意见记录。<br /> <br /> 
+							<div class="row">
+								<div class="col s6">
+								<img class="materialboxed" data-caption="个人信息" width="125"
+								 src="/imgs/personal.png"> 
+								</div>
+							</div>
 						</span>
 					</div>
 				</li>
@@ -35,13 +85,19 @@
 						<i class="material-icons">subtitles</i>绑定步骤说明
 					</div>
 					<div class="collapsible-body">
-						<span>
-							1. 本公众号通过您授权绑定的个人邮箱账户和授权码（或密码）向您的Kindle设备邮箱（或任意其他您想绑定的邮箱）推送电子书文件；为了您的个人邮箱账户安全，请尽量使用邮箱的授权码进行绑定；<br/><br/>
-							2. 若您使用启用了独立密码的QQ邮箱，请使用独立密码进行绑定（或授权码）而非QQ邮箱登录密码；<br/><br/>
-							3. 个人邮箱暂只支持163,126和QQ邮箱，其他邮箱的推送功能也将在今后逐步完善；<br/><br/>
-							4. 本公众号电子书资源以mobi格式文件为主，在除Kindle设备外的其他电子书阅读软件上可能无法浏览；另有pdf，txt，epub等其他格式的资源文件；<br/><br/>
-							5. 如果您所要推送的邮箱是Kindle邮箱，请将个人邮箱添加到亚马逊Kindle设备的信任邮箱列表中；<br/><br/>
-							6. 请确保个人邮箱已经开启了【IMAP/SMTP服务】。
+						<span> 
+							1. 本公众号通过您授权绑定的个人邮箱账户和授权码（或密码）向您的Kindle设备邮箱（或任意其他您想绑定的邮箱）推送电子书文件；为了您的个人邮箱账户安全，请尽量使用邮箱的授权码进行绑定；<br /><br /> 
+							<div class="row">
+								<div class="col s6">
+								<img class="materialboxed" data-caption="个人信息" width="125"
+								 src="/imgs/register.png"> 
+								</div>
+							</div>
+							2. 若您使用启用了独立密码的QQ邮箱，请使用独立密码进行绑定（或授权码）而非QQ邮箱登录密码；<br /> <br />
+							3. 个人邮箱暂只支持163,126和QQ邮箱，其他邮箱的推送功能也将在今后逐步完善；<br /> <br /> 4.
+							本公众号电子书资源以mobi格式文件为主，在除Kindle设备外的其他电子书阅读软件上可能无法浏览；另有pdf，txt，epub等其他格式的资源文件；<br />
+							<br /> 5. 如果您所要推送的邮箱是Kindle邮箱，请将个人邮箱添加到亚马逊Kindle设备的信任邮箱列表中；<br />
+							<br /> 6. 请确保个人邮箱已经开启了【IMAP/SMTP服务】。
 						</span>
 					</div>
 				</li>
@@ -50,11 +106,23 @@
 						<i class="material-icons">subtitles</i>如何启用IMAP/SMTP服务和授权码
 					</div>
 					<div class="collapsible-body">
-						<span>
-							1. 以QQ邮箱为例；请登录QQ邮箱；<br/><br/>
-							2. 点击 “设置 -> 账户 -> POP3/IMAP/SMTP/Exchange/CardDAV/CalDAV服务”；<br/><br/>
-							3. 查看IMAP/SMTP服务，点击“开启”；可能需要您进一步验证密保；<br/><br/>
-							4. 开启后会提示您的授权码；您可以在本公众号的绑定界面中，将个人邮箱的密码填写为本授权码；<br/><br/>
+						<span> 
+							1. 以QQ邮箱为例；请登录QQ邮箱；<br /> <br /> 
+							2. 点击 “设置 -> 账户 -> POP3/IMAP/SMTP/Exchange/CardDAV/CalDAV服务”；<br /> <br /> 
+							3. 查看IMAP/SMTP服务，点击“开启”；可能需要您进一步验证密保；<br /> <br /> 
+							4. 开启后会提示您的授权码；您可以在本公众号的绑定界面中，将个人邮箱的密码填写为本授权码；<br /> <br /> 
+							<div class="row">
+								<div class="col s12">
+								<img class="materialboxed" data-caption="IMAP/SMTP - 授权码设置" width="250"
+								 src="/imgs/smtp_setting_1.png"> 
+								</div>
+							</div>
+							<div class="row">
+								<div class="col s12">
+								<img class="materialboxed" data-caption="IMAP/SMTP - 授权码设置" width="250"
+								 src="/imgs/smtp_setting_2.png"> 
+								</div>
+							</div>
 							5. 其他类型邮箱（如163，126）操作类似。
 						</span>
 					</div>
@@ -64,12 +132,30 @@
 						<i class="material-icons">subtitles</i>如何添加Kindle信任邮箱
 					</div>
 					<div class="collapsible-body">
-						<span>
-							1. 登录亚马逊网站；<br/><br/>
-							2. 点击 “我的账户 -> 管理我的内容和设备 -> 设置 -> 个人文档设置”；<br/><br/>
-							3. 查看 “已认可的发件人电子邮箱列表”；<br/><br/>
-							4. 点击 “添加认可的电子邮箱”；<br/><br/>
+						<span> 
+							1. 登录亚马逊网站；<br /> <br /> 
+							2. 点击 “我的账户 -> 管理我的内容和设备 -> 设置 -> 个人文档设置”；<br /> <br /> 
+							3. 查看 “已认可的发件人电子邮箱列表”；<br /> <br />
+							4. 点击 “添加认可的电子邮箱”；<br /> <br /> 
 							5. 将您需要绑定的个人邮箱添加到此邮箱列表中。
+							<div class="row">
+								<div class="col s12">
+								<img class="materialboxed" data-caption="Amazon - Kindle 邮箱设置" width="250"
+								 src="/imgs/amazon_setting_1.png"> 
+								</div>
+							</div>
+							<div class="row">
+								<div class="col s12">
+								<img class="materialboxed" data-caption="Amazon - Kindle 邮箱设置" width="250"
+								 src="/imgs/amazon_setting_2.png"> 
+								</div>
+							</div>
+							<div class="row">
+								<div class="col s12">
+								<img class="materialboxed" data-caption="Amazon - Kindle 邮箱设置" width="250"
+								 src="/imgs/amazon_setting_3.png"> 
+								</div>
+							</div>
 						</span>
 					</div>
 				</li>
@@ -78,11 +164,10 @@
 						<i class="material-icons">subtitles</i>如何查看Kindle邮箱账号
 					</div>
 					<div class="collapsible-body">
-						<span>
-							1. 启动Kindle设备并登录亚马逊账号；<br/><br/>
-							2. 点击 “设置 -> 我的账户”；<br/><br/>
-							3. 查看 “【发送至Kindle】电子邮箱地址”；<br/><br/>
-							4. 提示：当您的Kindle设备登录了亚马逊账户后，您使用个人邮箱（已添加到Kindle信任邮箱列表中的）推送到Kindle设备邮箱的文件，就可以被亚马逊服务器推送到Kindle设备中。
+						<span> 1. 启动Kindle设备并登录亚马逊账号；<br /> <br /> 2. 点击 “设置 ->
+							我的账户”；<br /> <br /> 3. 查看 “【发送至Kindle】电子邮箱地址”；<br /> <br />
+							4.
+							提示：当您的Kindle设备登录了亚马逊账户后，您使用个人邮箱（已添加到Kindle信任邮箱列表中的）推送到Kindle设备邮箱的文件，就可以被亚马逊服务器推送到Kindle设备中。
 						</span>
 					</div>
 				</li>
