--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -122,11 +122,10 @@ body {<!--
 						<div class="card-action">
 							<a turnToSuccess href="###"
 								class="btn-small waves-effect lighten-4 z-depth-0"
-								v-on:click="sendMail(detail.id)"><font size="2px">Send
-									To Kindle</font></a> 
+								v-on:click="sendMail(detail.id)"><font size="2px">Send</font></a> 
 							<a href="#comment" v-on:click="saveBookId(detail.id)"
 								class="modal-trigger btn-small waves-effect lighten-4 z-depth-0"
-								:name="detail.id"><font size="2px">COMMENT</font></a>
+								:name="detail.id"><font size="2px">Comment</font></a>
 						</div>
 
 					</div>
@@ -187,54 +186,44 @@ body {<!--
 					href="toDeliveryRecords"><i class="material-icons">perm_identity</i></a></li>
 				<li><a class="btn-floating red  waves-effect z-depth-2"
 					href="#suggestionModal"><i class="material-icons">message</i></a></li>
-				<li><a
+				<!-- <li><a
 					class="btn-floating green waves-effect z-depth-2 modal-trigger"
 					v-on:click="toggleSearchBar()" href="javascript:scroll(0,0)"> <i
 						class="material-icons">search</i>
-				</a></li>
+				</a></li> -->
 				<li><a
 					class="btn-floating blue waves-effect z-depth-2 modal-trigger"
 					href="toIntroduction"><i
 						class="material-icons">live_help</i></a></li>
 			</ul>
 		</div>
-
-	</div>
-
-
-
-
-
-	<!-- Suggestion Modal Start -->
-	<div id="suggestionModal" class="modal bottom-sheet">
-		<div class="modal-content">
-			<div class="row">
+		
+		<!-- Suggestion Modal Start -->
+		<div id="suggestionModal" class="modal bottom-sheet">
+			<div class="modal-content">
 				<div class="row">
-					<div class="input-field col s12">
-						<i class="material-icons prefix">mode_edit</i>
-						<textarea id="suggestion_textarea" length="140"
-							class="materialize-textarea"></textarea>
-						<label for="suggestion_textarea">写下您的意见或建议：</label>
+					<div class="row">
+						<div class="input-field col s12">
+							<i class="material-icons prefix">mode_edit</i>
+							<textarea id="suggestion_textarea" length="140"
+								class="materialize-textarea" v-model="suggestion.content"></textarea>
+							<label for="suggestion_textarea">写下您对本公众号的意见或建议：</label>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="modal-footer">
+				<a
+					class="modal-action modal-close waves-effect btn-flat z-depth-1"
+					v-on:click="sendSuggestion()">提交</a>
+			</div>
 		</div>
-		<div class="modal-footer">
-			<a href="#!"
-				class="modal-action modal-close waves-effect btn-flat z-depth-1"
-				type="submit">提交</a>
-		</div>
+		<!-- Suggestion Modal End -->
+
 	</div>
-	<!-- Suggestion Modal End --> <!-- Search Modal Start --> <!-- <div id="searchModal" class="modal modal-fixed-footer">
-		<div class="modal-content">
-            <input id="search" width="100px"><i class="material-icons">search</i>
-		</div>
-		<div class="modal-footer">
-			<a href="#!"
-				class="modal-action modal-close waves-effect btn-flat z-depth-1"
-				type="submit">提交</a>
-		</div>
-	</div> --> <!-- Search Modal End --> </main>
+
+
+	</main>
 
 </body>
 
