back solution to send mail with common mail account

--- a/kindlepocket-web/src/main/resources/static/html/introduction.html
+++ b/kindlepocket-web/src/main/resources/static/html/introduction.html
@@ -23,20 +23,50 @@
 						<i class="material-icons">subtitles</i>Kindle Pocket 使用说明
 					</div>
 					<div class="collapsible-body">
-						<span> 本公众号不做商业用途，仅为订阅者提供个人电子图书搜索和推送业务，并以亚马逊Kindle设备为主；<br />
-							您可以自由绑定Kindle邮箱或其他个人邮箱作为接收电子图书的目的邮箱。
+						<span> Kindle Pocket拥有几千本电子书资源，当您需要电子图书的时候，向Kindle Pocket发出您的请求，
+						Kindle Pocket就会将您需要的书籍发送到您绑定的指定邮箱。<br/><br/>Kindle Pocket悄悄告诉您，如果您使用的设备是kindle，那会更加便捷，
+						Kindle Pocket会将电子书籍发送到您绑定的Kindle邮箱，由亚马逊服务器负责推送到您的Kindle设备中；<br/><br/>当然了，Kindle Pocket只为您服务，是不作商业用途的。
+
 						</span>
 					</div>
 				</li>
 				<li>
 					<div class="collapsible-header active waves-effect">
-						<i class="material-icons">subtitles</i>操作指南
+						<i class="material-icons">subtitles</i>Kindle Pocket 是如何为您服务的
 					</div>
 					<div class="collapsible-body">
 						<span> 
-							1. 在本公众号对话界面，输入电子书关键字，如：“红楼梦”，即可搜索带有此关键字的书目；输入数字“ 2
-							” 或“绑定”或“更新”，即可进行个人邮箱和Kindle设备的绑定；输入数字“ 1 ”或“介绍”或“指南”，即可重新接收此【
-							Kindle Pocket使用说明 】；<br />&nbsp;&nbsp;&nbsp;&nbsp;
+							<b>【搜索】</b>在Kindle Pocket的对话界面，输入您想获取的书籍名称或关键字。例如：输入关键字<b>“红楼梦”</b>，
+							Kindle Pocket就会为您显示所有带有“红楼梦”关键字的书籍<br /><br/>
+							<div class="row">
+								<div class="col s12">
+									<img class="materialboxed" data-caption="关键字搜索" width="125"
+									 src="/imgs/search.png"> 
+								</div>
+							</div>
+							<b>【发送请求】</b>点击进入具体书目页面，发送请求。例如：您想阅读俞平伯的《红楼梦辩（中华现代学术名著丛书）》，
+							点击<b>“send”</b>按钮，这样，Kindle Pocket就能轻松地获取您的需求，并以最快的速度将书籍发送到您绑定的指定邮箱中。
+							看见<b>“comment”</b>键了吗？点击它，您就可以尽情表达对这本书的看法。<br/><br/>
+							<div class="row">
+								<div class="col s12">
+									<img class="materialboxed" data-caption="查询详情" width="125"
+									 src="/imgs/detail.png"> 
+								</div>
+							</div><br/>
+							<b>【下载】</b>进入绑定的指定邮箱查看并下载。或者在Kindle中直接查看推送的书籍。<br/><br/>
+							<b>【个性“+”】</b>在进入搜索结果页面后，点击右下角“+”键，可以查看Kindle Pocket为您设置三个个性功能键：<b>个人信息</b>，<b>意见和建议</b>，以及<b>指南</b>。
+								在个人信息页面中，您可以查看账户绑定信息并更新，查看推送记录、评论记录和意见记录。<br/><br/>
+							<div class="row">
+								<div class="col s6">
+									<img class="materialboxed" data-caption="查询详情 - 菜单键" width="125"
+									 src="/imgs/detail_menu.png"> 
+								</div>
+								<div class="col s6">
+									<img class="materialboxed" data-caption="个人信息" width="125"
+									 src="/imgs/personal.png"> 
+								</div>
+							</div>
+							<b>【注册及邮箱的绑定】</b>在Kindle Pocket对话界面，输入数字<b>“2”</b>或<b>“绑定”</b>、<b>“更新”</b>，就可以进入注册和邮箱绑定的界面（具体的填写方法Kindle Pocket会在【绑定步骤】里详细说明的）。<br/><br/>
 							<div class="row">
 								<div class="col s6">
 								<img class="materialboxed" data-caption="账户绑定" width="125"
@@ -48,33 +78,11 @@
 								 src="/imgs/update.png">
 								</div>
 							</div>
+							<b>【返回本页面】</b>在Kindle Pocket对话界面，输入数字<b>“1”</b>或<b>“介绍”</b>、<b>“指南”</b>，就可以重新接收进入本页面的链接。<br/><br/>
 							<div class="row">
-								<div class="col s6">
-								<img class="materialboxed" data-caption="关键字搜索" width="125"
-								 src="/imgs/search.png"> 
-								</div>
-								<div class="col s6">
+								<div class="col s12">
 								<img class="materialboxed" data-caption="指南" width="125"
 								 src="/imgs/guiding.png"> 
-								</div>
-							</div>
-							2. 点击关键字搜索的结果，即可进入详情界面；在详情界面，您可以点击“Comment”按钮评论电子书，或点击“Send”按钮，后台会将此电子书推送到您的绑定的Kindle邮箱（或其他类型的邮箱）；点击右下角红色“+”，可以查看个人信息、反馈意见和查看此【 Kindle
-							Pocket使用说明 】；<br /> <br /> 
-							<div class="row">
-								<div class="col s6">
-								<img class="materialboxed" data-caption="查询详情" width="125"
-								 src="/imgs/detail.png"> 
-								</div>
-								<div class="col s6">
-								<img class="materialboxed" data-caption="查询详情 - 菜单键" width="125"
-								 src="/imgs/detail_menu.png"> 
-								</div>
-							</div>
-							3. 在个人信息页面中，您可以查看账户绑定信息并更新，查看推送记录、评论记录和意见记录。<br /> <br /> 
-							<div class="row">
-								<div class="col s6">
-								<img class="materialboxed" data-caption="个人信息" width="125"
-								 src="/imgs/personal.png"> 
 								</div>
 							</div>
 						</span>
@@ -82,48 +90,41 @@
 				</li>
 				<li>
 					<div class="collapsible-header waves-effect">
-						<i class="material-icons">subtitles</i>绑定步骤说明
+						<i class="material-icons">subtitles</i>如何绑定邮箱
 					</div>
 					<div class="collapsible-body">
 						<span> 
-							1. 本公众号通过您授权绑定的个人邮箱账户和授权码（或密码）向您的Kindle设备邮箱（或任意其他您想绑定的邮箱）推送电子书文件；为了您的个人邮箱账户安全，请尽量使用邮箱的授权码进行绑定；<br /><br /> 
+							<b>【步骤】</b><br/><br/>
+							我们在Kindle Pocket对话界面输入“2”或“绑定”、“更新”，进入以下界面。
+							您可以按照图中要求依次填写，最后一项“kindle邮箱”里的内容就是您绑定的指定邮箱，也就是接收电子图书的邮箱<b>（推荐填写Kindle邮箱）</b>。<br/><br/>
 							<div class="row">
 								<div class="col s6">
 								<img class="materialboxed" data-caption="个人信息" width="125"
 								 src="/imgs/register.png"> 
 								</div>
 							</div>
-							2. 若您使用启用了独立密码的QQ邮箱，请使用独立密码进行绑定（或授权码）而非QQ邮箱登录密码；<br /> <br />
-							3. 个人邮箱暂只支持163,126和QQ邮箱，其他邮箱的推送功能也将在今后逐步完善；<br /> <br /> 4.
-							本公众号电子书资源以mobi格式文件为主，在除Kindle设备外的其他电子书阅读软件上可能无法浏览；另有pdf，txt，epub等其他格式的资源文件；<br />
-							<br /> 5. 如果您所要推送的邮箱是Kindle邮箱，请将个人邮箱添加到亚马逊Kindle设备的信任邮箱列表中；<br />
-							<br /> 6. 请确保个人邮箱已经开启了【IMAP/SMTP服务】。
+							<b>【注意事项】</b><br/><br/>
+									  1. 若您使用启用了独立密码的QQ邮箱，请使用独立密码进行绑定（或授权码）而非QQ邮箱登录密码；<br /> <br />
+									  2. 个人邮箱暂只支持<b>163</b>,<b>126</b>和<b>QQ</b>邮箱，其他邮箱的推送功能也将在今后逐步完善；<br /> <br /> 
+									  3. 本公众号电子书资源以mobi格式文件为主，在除Kindle设备外的其他电子书阅读软件上可能无法浏览；另有pdf，txt，epub等其他格式的资源文件；<br /><br />
+									  4. 如果您所要推送的邮箱是Kindle邮箱，请将个人邮箱添加到亚马逊Kindle设备的信任邮箱列表中；如何查看Kindle邮箱？⬇️️&nbsp;&nbsp;如何添加信任列表？⬇️️<br /><br /> 
+								      5. 请确保个人邮箱已经开启了【IMAP/SMTP服务】；如何开启？⬇<br /> <br />
+								      6. 为避免个人邮箱设置异常，本公众号会在您的个人邮箱授权失败后使用公共邮箱账号【<b>kindlepocket@163.com</b>】进行推送，
+								      所以当您的目的邮箱为Kindle邮箱时，请务必将此公共邮箱账号添加到Kindle信任列表中，以防止在个人邮箱推送失败后，无法推送的问题；
+								      <b>请勿长期使用此公共邮箱账号进行推送，当您在个人信息页面的推送记录中查看到个人邮箱推送失败的信息后，务必及时按照此指南更新您的个人邮箱设置，特别是【IMAP/SMTP服务】的设置
+								      以免本公共邮箱账号被亚马逊列入黑名单而导致您无法接收电子书。</b> ️
 						</span>
 					</div>
 				</li>
 				<li>
 					<div class="collapsible-header waves-effect">
-						<i class="material-icons">subtitles</i>如何启用IMAP/SMTP服务和授权码
+						<i class="material-icons">subtitles</i>如何查看Kindle邮箱账号
 					</div>
 					<div class="collapsible-body">
-						<span> 
-							1. 以QQ邮箱为例；请登录QQ邮箱；<br /> <br /> 
-							2. 点击 “设置 -> 账户 -> POP3/IMAP/SMTP/Exchange/CardDAV/CalDAV服务”；<br /> <br /> 
-							3. 查看IMAP/SMTP服务，点击“开启”；可能需要您进一步验证密保；<br /> <br /> 
-							4. 开启后会提示您的授权码；您可以在本公众号的绑定界面中，将个人邮箱的密码填写为本授权码；<br /> <br /> 
-							<div class="row">
-								<div class="col s12">
-								<img class="materialboxed" data-caption="IMAP/SMTP - 授权码设置" width="250"
-								 src="/imgs/smtp_setting_1.png"> 
-								</div>
-							</div>
-							<div class="row">
-								<div class="col s12">
-								<img class="materialboxed" data-caption="IMAP/SMTP - 授权码设置" width="250"
-								 src="/imgs/smtp_setting_2.png"> 
-								</div>
-							</div>
-							5. 其他类型邮箱（如163，126）操作类似。
+						<span>  1. 启动Kindle设备并登录亚马逊账号；<br /> <br /> 
+								2. 点击 <b>“设置 ->我的账户”</b>；<br /> <br /> 
+								3. 查看 <b>“【发送至Kindle】电子邮箱地址”</b>；<br /> <br />
+								<b>【提示】</b>当您的Kindle设备登录了亚马逊账户后，您使用个人邮箱（已添加到Kindle信任邮箱列表中的）推送到Kindle设备邮箱的文件，就可以被亚马逊服务器推送到Kindle设备中。
 						</span>
 					</div>
 				</li>
@@ -134,10 +135,10 @@
 					<div class="collapsible-body">
 						<span> 
 							1. 登录亚马逊网站；<br /> <br /> 
-							2. 点击 “我的账户 -> 管理我的内容和设备 -> 设置 -> 个人文档设置”；<br /> <br /> 
-							3. 查看 “已认可的发件人电子邮箱列表”；<br /> <br />
-							4. 点击 “添加认可的电子邮箱”；<br /> <br /> 
-							5. 将您需要绑定的个人邮箱添加到此邮箱列表中。
+							2. 点击 <b>“我的账户 -> 管理我的内容和设备 -> 设置 -> 个人文档设置”</b>；<br /> <br /> 
+							3. 查看 <b>“已认可的发件人电子邮箱列表”</b>；<br /> <br />
+							4. 点击 <b>“添加认可的电子邮箱”</b>；<br /> <br /> 
+							5. 将您需要绑定的个人邮箱添加到此邮箱列表中。<br/><br/>
 							<div class="row">
 								<div class="col s12">
 								<img class="materialboxed" data-caption="Amazon - Kindle 邮箱设置" width="250"
@@ -161,16 +162,32 @@
 				</li>
 				<li>
 					<div class="collapsible-header waves-effect">
-						<i class="material-icons">subtitles</i>如何查看Kindle邮箱账号
+						<i class="material-icons">subtitles</i>如何启用IMAP/SMTP服务和授权码
 					</div>
 					<div class="collapsible-body">
-						<span> 1. 启动Kindle设备并登录亚马逊账号；<br /> <br /> 2. 点击 “设置 ->
-							我的账户”；<br /> <br /> 3. 查看 “【发送至Kindle】电子邮箱地址”；<br /> <br />
-							4.
-							提示：当您的Kindle设备登录了亚马逊账户后，您使用个人邮箱（已添加到Kindle信任邮箱列表中的）推送到Kindle设备邮箱的文件，就可以被亚马逊服务器推送到Kindle设备中。
+						<span> 
+							1. 以QQ邮箱为例；请登录QQ邮箱；<br /> <br /> 
+							2. 点击 <b>“设置 -> 账户 -> POP3/IMAP/SMTP/Exchange/CardDAV/CalDAV服务”</b>；<br /> <br /> 
+							3. 查看IMAP/SMTP服务，点击<b>“开启”</b>；可能需要您进一步验证密保；<br /> <br /> 
+							4. 开启后会提示您的授权码，或直接点击下方的<b>“生成授权码”</b>来获取；您可以在本公众号的绑定界面中，将个人邮箱的密码填写为本授权码；<br /> <br /> 
+							<div class="row">
+								<div class="col s12">
+								<img class="materialboxed" data-caption="IMAP/SMTP - 授权码设置" width="250"
+								 src="/imgs/smtp_setting_1.png"> 
+								</div>
+							</div>
+							<div class="row">
+								<div class="col s12">
+								<img class="materialboxed" data-caption="IMAP/SMTP - 授权码设置" width="250"
+								 src="/imgs/smtp_setting_2.png"> 
+								</div>
+							</div>
+							5. 其他类型邮箱（如163，126）操作类似。
 						</span>
 					</div>
 				</li>
+				
+				
 			</ul>
 		</div>
 	</div>
